--- a/app/blocks/burger/burger.scss
+++ b/app/blocks/burger/burger.scss
@@ -4,9 +4,13 @@
   justify-content: space-between;
   width: 42px;
   height: 32px;
+  cursor: pointer;
+  
   &__line {
     height: 4px;
     background: $color-basic-dark;
+    transition: $ease-main;
+
     &_top {
       width: 100%;
     }
@@ -16,7 +20,13 @@
     &_bottom {
       width: 70%;
     }
+
   }
 
+  &:hover {
+    .burger__line {
+      background: $color-basic;
+    }
+  }
 
 }
