--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -18,5 +18,6 @@ include ../blocks/rating/rating
 include ../blocks/slider/slider
 include ../blocks/table/table
 include ../blocks/tabs/tabs
+include ../components/banner/banner
 include ../components/header/header
 include ../components/ui-kit/ui-kit
