--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,12 +12,15 @@
 @import '../pages/**/*';
 
 .container {
-  width: $container-width;
+  width: 1620px;
   padding-left: $container-padding;
   padding-right: $container-padding;
   margin: 0 auto;
-  max-width: 100%;
   box-sizing: border-box;
+  &_flex {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .js-sr {
