--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -1,13 +1,15 @@
 mixin header()
   +b.header&attributes(attributes)
-    +e.__logo
-      +e.IMG.__logo-img(src='assets/images/logo.png')
-    +header-menu
-    +burger
+    .container.container_flex
+      +e.__logo
+        +e.IMG.__logo-img(src='assets/images/logo.png')
+      +header-menu
+      +burger
 
 mixin header-login()
   +b.header&attributes(attributes)
-    +e.__logo
-      +e.IMG.__logo-img(src='assets/images/logo.png')
-    +header-user
-    +burger
+    .container.container_flex
+      +e.__logo
+        +e.IMG.__logo-img(src='assets/images/logo.png')
+      +header-user
+      +burger
