--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -1,31 +1,36 @@
 mixin banner()
   +b.banner&attributes(attributes)
+    .container.container_flex
+      +e.__left
+        +e.UL.__top-list
+          +e.LI.__top-item._left
+            +e.A(href="#").__top-link London
+          +e.LI.__top-item._center
+            +e.A(href="#").__top-link Kensington
+          +e.LI.__top-item._right
+            +e.A(href="#").__top-link EC2A,London
+        
+        +e.UL.__sqad-list 
+          +e.LI.__sqad-item
+          +e.LI.__sqad-item._red
+          +e.LI.__sqad-item._blue
+          +e.LI.__sqad-item._green
 
-    +e.UL.__top-list
-      +e.LI.__top-item
-        +e.A(href="#").__top-link London
-      +e.LI.__top-item._center
-        +e.A(href="#").__top-link Kensington
-      +e.LI.__top-item
-        +e.A(href="#").__top-link EC2A,London
-    
-    +e.UL.__sqad-list 
-      +e.LI.__sqad-item
-      +e.LI.__sqad-item._red
-      +e.LI.__sqad-item._blue
-      +e.LI.__sqad-item._greed
+        +e.H1.__title Boutique Workplace - 1 Neal Street
 
-    +e.H1.__title Boutique Workplace - 1 Neal Street
+        +e.UL.__down-list 
+          +e.LI.__down-item
+            +e.A(href="#").__link-item
+              +e.IMG(src='./assets/images/heart-top.png')
+              +e.__text Add to Favorites
+          +e.LI.__down-item
+            +e.A(href="#").__link-item
+              +e.IMG(src='./assets/images/arr-down.png')
+              +e.__text Download as PDF
 
-    +e.UL.__down-list 
-      +e.LI.__down-item
-        +e.A(href="#").__link-item
-          +icon()
-          +e.__text Add to Favorites
-      +e.LI.__down-item
-        +e.A(href="#").__link-item
-          +icon()
-          +e.__text Download as PDF
-
-    +e.__start Starting at Just
-    +e.__start-price £300 per month
+        +e.__start Starting at Just
+        +e.__start-price £300 per month
+      +e.__right
+        +slider
+          +slide
+            img(src='./assets/images/slide.jpg').slide-img
