--- a/app/components/banner/banner.scss
+++ b/app/components/banner/banner.scss
@@ -1,4 +1,114 @@
 .banner {
   display: block;
   width: 100%;
+  font-size: 17px;
+  letter-spacing: -0.34px;
+  color: $color-wite;
+
+  &__left {
+    width: 33.3%;
+    padding: 63px 67px 50px 67px;
+    background: $color-grey-dark;
+    height: 100%;
+  }
+
+  &__right {
+    width: 66.6%;
+  }
+
+  &__top-list {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+  }
+
+  &__top-item {
+    &_center {
+      border-left: 1px solid $color-basic;
+      border-right: 1px solid $color-basic;
+      padding: 0 12px;
+    }
+    &_left {
+      padding-right: 12px;
+    }
+    &_right {
+      padding-left: 12px;
+    }
+    
+  }
+
+  &__top-link {
+    color: $color-wite;
+    font-weight: 700;
+  }
+
+  &__sqad-list {
+    display: flex;
+    margin-bottom: 39px;
+  }
+
+  &__sqad-item {
+    height: 19px;
+    width: 19px;
+    background: $color-yellow;
+
+    &_red {
+      background: $color-red;
+    }
+    &_blue {
+      background: $color-blue;
+    }
+    &_green {
+      background: $color-green;
+    }
+  }
+
+  &__title {
+    @include heading-2;
+    margin-bottom: auto;
+    letter-spacing: -0.8px;
+    display: block;
+  }
+
+  &__down-list {
+    display: flex;
+    margin-bottom: 64px;
+    margin-top: 10px;
+  }
+
+  &__down-item {
+    &:first-child {
+      margin-right: 53px;
+    }
+  }
+
+  &__link-item {
+    display: flex;
+    align-items: center;
+  }
+
+  &__text {
+    margin-left: 13px;
+    color: $color-wite;
+    font-weight: 700;
+  }
+
+  &__start {
+    font-weight: 300;
+    font-size: 16px;
+    letter-spacing: -0.32px;
+    margin-bottom: 12px;
+  }
+
+  &__start-price {
+    font-size: 25px;
+    letter-spacing: -0.5px;
+    font-weight: 700;
+  }
+
+}
+
+.slide-img {
+  height: 100%;
+  width: auto;
 }
