--- a/app/blocks/header-menu/header-menu.pug
+++ b/app/blocks/header-menu/header-menu.pug
@@ -5,6 +5,6 @@ mixin header-menu()
     +e.LI.__item
       +e.A(href="#").__link Support
     +e.LI.__item
-      +e.A(href="#").__link Sing Up
+      +e.A(href="#").__link Sign Up
     +e.LI.__item
-      +e.A(href="#").__link Sing In
+      +e.A(href="#").__link Sign In
