--- a/app/blocks/header-menu/header-menu.scss
+++ b/app/blocks/header-menu/header-menu.scss
@@ -13,6 +13,7 @@
     transition: $ease-main;
     font-weight: 700;
     font-size: 17px;
+    letter-spacing: -0.34px;
     &:hover {
       color: $color-basic-dark;
       
