--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -1,6 +1,6 @@
 mixin banner()
   +b.banner&attributes(attributes)
-    .container.container_flex
+    .container.container_banner
       +e.__left
         +e.UL.__top-list
           +e.LI.__top-item._left
