--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,13 +13,15 @@
 
 .container {
   width: 1620px;
-  padding-left: $container-padding;
-  padding-right: $container-padding;
   margin: 0 auto;
   box-sizing: border-box;
   &_flex {
     display: flex;
     align-items: center;
+  }
+  &_banner {
+    display: flex;
+    align-items: stretch;
   }
 
 }
