--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -4,6 +4,7 @@ include ../blocks/burger/burger
 include ../blocks/button/button
 include ../blocks/content-zone/content-zone
 include ../blocks/dropdown/dropdown
+include ../blocks/facil-list/facil-list
 include ../blocks/form-elements/form-elements
 include ../blocks/grid/grid
 include ../blocks/header-menu/header-menu
@@ -15,9 +16,15 @@ include ../blocks/map/map
 include ../blocks/popups/popups
 include ../blocks/put-block-into-slot/put-block-into-slot
 include ../blocks/rating/rating
+include ../blocks/scroll-form/scroll-form
 include ../blocks/slider/slider
 include ../blocks/table/table
 include ../blocks/tabs/tabs
+include ../blocks/text-list/text-list
 include ../components/banner/banner
+include ../components/breadcrumbs-box/breadcrumbs-box
+include ../components/content-left/content-left
+include ../components/content/content
+include ../components/footer/footer
 include ../components/header/header
 include ../components/ui-kit/ui-kit
