--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -7,3 +7,17 @@ block content
   +b.index
     +header
     +banner
+    +breadcrumbs-box
+    +content
+    +slider-two
+      +slide
+        img(src='./assets/images/sbo.jpg').slide-img
+      +slide
+        img(src='./assets/images/sbt.jpg').slide-img
+      +slide
+        img(src='./assets/images/sbth.jpg').slide-img
+      +slide
+        img(src='./assets/images/sbf.jpg').slide-img
+      +slide
+        img(src='./assets/images/slide.jpg').slide-img
+    +footer
