--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -128,6 +128,17 @@ block content
           +col(12)
             +header-login
 
+    +ui-section
+      +ui-section-head
+        h2 scrollform
+        p Блок: components/header
+      +ui-section-content()
+        +grid
+          +col(3)
+          +col(3)
+            +scroll-form
+            
+
     //- Кнопки
     +ui-section
       +ui-section-head
@@ -346,7 +357,7 @@ block content
         h2 Хлебные крошки
         p Блок: blocks/breadcrumbs/breadcrumbs
       +ui-section-content()
-        +breadcrumbs(['Главная', 'Раздел', 'Страница'])
+        +breadcrumbs(['London', 'Kensington', 'Boutique Workplace - 1 Neal Street'])
 
     //- Рейтинг
     +ui-section
@@ -370,7 +381,7 @@ block content
         +accordions
           +accordion.is-active
             +accordion-header
-              +accordion-button Блок #1
+              +accordion-button +
             +accordion-body
               | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               | Obcaecati aliquam perferendis velit ex numquam, consequatur
