--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,6 +24,12 @@
     align-items: stretch;
   }
 
+  &_content {
+    width: 1064px;
+    display: flex;
+    align-items: flex-start;
+  }
+
 }
 
 .js-sr {
