--- a/app/styles/helpers/_basics.scss
+++ b/app/styles/helpers/_basics.scss
@@ -58,6 +58,7 @@ body {
   font-family: $font-main; // Задаем основной шрифт
   font-size: 16px; // Убираем проблему с отступами между inline-элементами
   color: $color-basic;
+  background: $color-bg;
 }
 
 img {
