--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -44,7 +44,7 @@ $color-bc-light: #acb5c0;
 $color-bc-dark:#303333;
 $color-form-border:#c0c6cf;
 $color-border-light: #dbe1e3;
-
+$text-light:#a5b0bd;
 // ##########
 // Transitions
 // ##########
