--- a/app/components/content-left/content-left.scss
+++ b/app/components/content-left/content-left.scss
@@ -10,6 +10,9 @@
     font-weight: 700;
     letter-spacing: -0.5px;
     margin-bottom: 40px;
+    &_top {
+      margin-top: 33px;
+    }
   }
 
   &__text {
