--- a/app/components/content-left/content-left.scss
+++ b/app/components/content-left/content-left.scss
@@ -6,24 +6,30 @@
   border-bottom: 1px solid $color-basic-light;
 
   &__title {
-    font-size: 25px;
+    font-size: 24px;
     font-weight: 700;
-    letter-spacing: -0.5px;
-    margin-bottom: 40px;
+    letter-spacing: -1px;
+    margin-bottom: 30px;
     &_top {
-      margin-top: 33px;
+      margin-top: 27px;
+    }
+
+    &_location {
+      margin-bottom: 21px;
     }
   }
 
   &__text {
-    margin-bottom: 76px;
+    margin-bottom: 67px;
     letter-spacing: -0.36px;
-    line-height: 1.4;
+    line-height: 1.65;
   }
 
   &__title-bottom {
     margin-bottom: 20px;
     font-weight: 700;
+    font-size: 18px;
+    letter-spacing: -0.8px;
   }
 
   &__map-item {
