--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -2,7 +2,7 @@ mixin content-left()
   +b.content-left&attributes(attributes)
     +e.__title._top Description
     +e.__text One Neal Street offers a modern, self-contained office solution, which is located just off of Covent Garden's Long Acre. Unbranded and fully furnished, this renovated boutique office space is flooded with natural light. One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
-    +e.__title Location
+    +e.__title._location Location
     +e.__title-bottom 8-10 New Fetter Ln, London EC4A 1AZ
     +map()#map
     +e.UL.__map-list
