--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -9,24 +9,29 @@ mixin content-left()
       +e.LI.__map-item
         +e.__map-text Chancery Lane
         +e.IMG(src='./assets/images/stop.png').__last
-        +e.__map-text 5 min
+        +e.__map-text._min 5 min
         +e.IMG(src='./assets/images/men.png')
       +e.LI.__map-item
         +e.__map-text Great Portland Street
         +e.IMG(src='./assets/images/stop.png')
         +e.IMG(src='./assets/images/stop.png').__mr
         +e.IMG(src='./assets/images/stop.png').__last
-        +e.__map-text 25 min
+        +e.__map-text._min 25 min
         +e.IMG(src='./assets/images/men.png')
       +e.LI.__map-item
         +e.__map-text Haymarket / Jermyn Street
-        +e.IMG(src='./assets/images/stop.png').__last
-        +e.__map-text 25 min
+        +e.IMG(src='./assets/images/bus.png')
+        +e.__map-nomer 6
+        +e.__map-nomer 20
+        +e.__map-nomer N53
+        +e.__map-nomer N15
+        +e.__map-nomer.__last N113
+        +e.__map-text_min 25 min
         +e.IMG(src='./assets/images/men.png')
       +e.LI.__map-item
         +e.__map-text Heathrow airport
         +e.IMG(src='./assets/images/fly.png').__last
-        +e.__map-text 40-80 min
+        +e.__map-text_min 44-80 min
         +e.IMG(src='./assets/images/car.png')
     +e.__title Building rules
     +e.__text  One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
