--- a/app/components/content-left/content-left.scss
+++ b/app/components/content-left/content-left.scss
@@ -1,6 +1,6 @@
 .content-left {
   flex: 2;
-  margin-right: 56px;
+  margin-right: 16px;
   display: block;
   color: $color-basic;
   border-bottom: 1px solid $color-basic-light;
@@ -26,19 +26,39 @@
   }
 
   &__title-bottom {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     font-weight: 700;
     font-size: 18px;
     letter-spacing: -0.8px;
   }
 
+  &__map-list {
+    margin-top: 47px;
+  }
+
   &__map-item {
     display: flex;
+    padding-bottom: 11px;
     border-bottom: 1px solid $color-basic-light;
+    margin-bottom: 12px;
   }
 
   &__map-text {
     margin-right: 13px;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: -0.8px;
+    &_min {
+      font-weight: 400;
+      letter-spacing: 0px;
+    }
+  }
+
+  &__map-nomer {
+    margin-left: 13px;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: -0.3px;
   }
 
   &__last {
