--- a/app/blocks/facil-list/facil-list.scss
+++ b/app/blocks/facil-list/facil-list.scss
@@ -2,12 +2,13 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 53px;
 
   &__item {
     width: 16%;
     border: 1px solid $color-basic;
     margin-bottom: 13px;
-    padding: 20px;
+    padding:10px 22px;
     display: flex;
     flex-direction: column;
   }
