--- a/app/blocks/text-list/text-list.scss
+++ b/app/blocks/text-list/text-list.scss
@@ -1,6 +1,6 @@
 .text-list {
   display: block;
-
+  margin-bottom: 73px;
   &__circle {
     width: 6px;
     height: 6px;
@@ -12,6 +12,9 @@
   &__item {
     display: flex;
     align-items: center;
-    margin-bottom: 25px;
+    margin-bottom: 14px;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: -0.36px;
   }
 }
