--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -34,15 +34,16 @@ mixin content-left()
         +e.__map-text_min 44-80 min
         +e.IMG(src='./assets/images/car.png')
     +e.__title Building rules
-    +e.__text  One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
+    +e.__text._building  One Neal Street offers some twelve-thousand square foot of open-plan office space across the third floor, which can accommodate up to two hundred people. It also benefits from 24/7 access, a manned reception and large kitchen and breakout area.
     +text-list
-    +e.__title Facilities
+    +e.__title._Facilities Facilities
     +facil-list
+    +e.__title._offers Offers
     +tabs
-      +tab()(data-tab-target="tab1" class="tabs_yellow").active Информация
-      +tab()(data-tab-target="tab2" class="tabs_red") Информация
-      +tab()(data-tab-target="tab3" class="tabs_blue") Информация
-      +tab()(data-tab-target="tab3" class="tabs_green") Информация
+      +tab()(data-tab-target="tab1" class="tabs_yellow").active Hot Desk
+      +tab()(data-tab-target="tab2" class="tabs_red") Dedicated desk
+      +tab()(data-tab-target="tab3" class="tabs_blue") Meeting room
+      +tab()(data-tab-target="tab3" class="tabs_green") Office space
     +tabs-content
       +tab-wrapper()(data-tab="tab1" data-tab-group="testtabs").active
         +accordions
