--- a/app/components/content-left/content-left.scss
+++ b/app/components/content-left/content-left.scss
@@ -17,12 +17,24 @@
     &_location {
       margin-bottom: 21px;
     }
+
+    &_Facilities {
+      margin-bottom: 39px;
+    }
+
+    &_offers {
+      margin-bottom: 37px;
+    }
   }
 
   &__text {
     margin-bottom: 67px;
     letter-spacing: -0.36px;
     line-height: 1.65;
+
+    &_building {
+      margin-bottom: 34px;
+    }
   }
 
   &__title-bottom {
@@ -34,6 +46,7 @@
 
   &__map-list {
     margin-top: 47px;
+    margin-bottom: 78px;
   }
 
   &__map-item {
