--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -10,11 +10,11 @@
     margin-top: $tab-gap;
     border: 1px solid $color-border-light;
     transition: border-color $ease-main, opacity $ease-main;
-    padding: 27px 33px;
+    padding: 27px 30px;
     cursor: pointer;
-    box-sizing: initial;
-
-    @include text;
+    font-size: 17px;
+    font-weight: 700;
+    letter-spacing: -0.34px;
 
     &.active {
       border-bottom: 2px solid;
@@ -47,7 +47,7 @@
       border-bottom: 6px solid $color-green;
     }
   }
-
+ 
 
   & + &-content { margin-top: 30px; }
 
