--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -5,12 +5,11 @@
   .accordions & { margin-top: -1px; }
 
   &__header {
-    padding-right: 28px;
     height: 40px;
     display: flex;
     width: 100%;
     box-sizing: border-box;
-    line-height: 38px;
+    align-items: center;
 
     // &::after {
     //   content: '';
@@ -34,13 +33,61 @@
 
   }
 
+  &__hot-desc {
+    color: $text-light;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: -0.3px;
+    font-weight: 700;
+    margin-left: 14px;
+  }
+
+  &__price {
+    letter-spacing: -0.4px;
+    font-weight: 700;
+    font-size: 20px;
+    margin-left: 14px;
+    border-left: 1px solid $color-basic;
+    padding-left: 14px;
+  }
+
+  img {
+    margin-left: 50px;
+  }
+
   &__button {
     cursor: pointer;
-    width: 40px;
+    width: 21px;
+    height: 21px;
+    border-radius: 3px;
+    font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid $color-border;
+  }
+
+  &__text-acr {
+    margin-left: auto;
+    color: $color-blue;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: -0.3px;
+    font-size: 15px;
+  }
+
+  .button {
+    margin-left: 11px;
+    padding: 3px 3px;
+    font-size: 14px;
+    letter-spacing: -0.3px;
+    font-weight: 700;
+    &__text {
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   &__body {
