--- a/app/blocks/text-list/text-list.scss
+++ b/app/blocks/text-list/text-list.scss
@@ -1,6 +1,11 @@
 .text-list {
   display: block;
   margin-bottom: 73px;
+
+  &_acardeon {
+    margin-bottom: 10px;
+  }
+
   &__circle {
     width: 6px;
     height: 6px;
