--- a/app/components/banner/banner.pug
+++ b/app/components/banner/banner.pug
@@ -31,6 +31,6 @@ mixin banner()
         +e.__start Starting at Just
         +e.__start-price £300 per month
       +e.__right
-        +slider
+        +slider(false, true)
           +slide
             img(src='./assets/images/slide.jpg').slide-img
