--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -57,24 +57,18 @@ mixin content-left()
               +button-gradient Request Reservation
 
             +accordion-body
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              | Obcaecati aliquam perferendis velit ex numquam, consequatur
-              | doloribus magnam accusantium expedita eveniet,
-              | quisquam voluptate quos maiores impedit quibusdam.
-              | Quod sit molestias sapiente.
-
-              +text-list
+              +e.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
+              +text-list._acardeon
 
 
           +accordion
-            +accordion-header
+            +accordion-header 
               +accordion-button +
+              +e.__hot-desc hot desc
+              +e.__price £185 per month
+              +e.__text-acr AVIALABLE NOW
             +accordion-body
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              | Obcaecati aliquam perferendis velit ex numquam, consequatur
-              | doloribus magnam accusantium expedita eveniet,
-              | quisquam voluptate quos maiores impedit quibusdam.
-              | Quod sit molestias sapiente.
+              +e.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
 
               +text-list
 
@@ -82,43 +76,39 @@ mixin content-left()
       +tab-wrapper()(data-tab="tab2" data-tab-group="testtabs")
         +accordions
           +accordion.is-active
-            +accordion-header
-              +accordion-button Блок #1
+            +accordion-header 
+              +accordion-button +
+              +e.__hot-desc hot desc
+              +e.__price £185 per month
+              +e.__text-acr AVIALABLE NOW
             +accordion-body
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              | Obcaecati aliquam perferendis velit ex numquam, consequatur
-              | doloribus magnam accusantium expedita eveniet,
-              | quisquam voluptate quos maiores impedit quibusdam.
-              | Quod sit molestias sapiente.
+              +e.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
           +accordion
-            +accordion-header
-              +accordion-button Блок #2
+            +accordion-header 
+              +accordion-button +
+              +e.__hot-desc hot desc
+              +e.__price £185 per month
+              +e.__text-acr AVIALABLE NOW
             +accordion-body
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              | Obcaecati aliquam perferendis velit ex numquam, consequatur
-              | doloribus magnam accusantium expedita eveniet,
-              | quisquam voluptate quos maiores impedit quibusdam.
-              | Quod sit molestias sapiente.
+              +e.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
       +tab-wrapper()(data-tab="tab3" data-tab-group="testtabs")
         +accordions
           +accordion.is-active
-            +accordion-header
-              +accordion-button Блок #1
+            +accordion-header 
+              +accordion-button +
+              +e.__hot-desc hot desc
+              +e.__price £185 per month
+              +e.__text-acr AVIALABLE NOW
             +accordion-body
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              | Obcaecati aliquam perferendis velit ex numquam, consequatur
-              | doloribus magnam accusantium expedita eveniet,
-              | quisquam voluptate quos maiores impedit quibusdam.
-              | Quod sit molestias sapiente.
+              +e.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
           +accordion
-            +accordion-header
-              +accordion-button Блок #2
+            +accordion-header 
+              +accordion-button +
+              +e.__hot-desc hot desc
+              +e.__price £185 per month
+              +e.__text-acr AVIALABLE NOW
             +accordion-body
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              | Obcaecati aliquam perferendis velit ex numquam, consequatur
-              | doloribus magnam accusantium expedita eveniet,
-              | quisquam voluptate quos maiores impedit quibusdam.
-              | Quod sit molestias sapiente.
+              +e.__text This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
 
 
 
