--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -2,6 +2,7 @@
   display: block;
   margin-top: 20px;
   border-top: 1px solid $color-basic;
+  padding: 50px 0 0 0;
 
   &__logo {
     margin-right: 60px;
@@ -10,6 +11,7 @@
   &__top {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 68px;
   }
 
   &__col {
@@ -32,7 +34,10 @@
   }
 
   &__vertical-item {
-    margin-bottom: 25px;
+    margin-bottom: 16px;
+    font-size: 16px;
+    letter-spacing: -0.32px;
+    font-weight: 700;
     &:last-child {
       margin-bottom: 0;
     }
@@ -56,8 +61,10 @@
     
   }
 
-  .container {
-    padding: 10px 0;
-    border-top: 1px solid $color-basic;
+  &__down {
+    .container {
+      padding: 40px 0;
+      border-top: 1px solid $color-basic;
+    }
   }
 }
