--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -10,7 +10,7 @@ block content
     +breadcrumbs-box
     +content
     .container
-      +slider-two
+       +slider-two(false, true)
         +slide
           img(src='./assets/images/sbo.jpg').slide-img
         +slide
