--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -89,6 +89,13 @@
   }
 }
 
-.slide-img {
+.slider-title {
+  margin-bottom: 52px;
+  font-size: 25px;
+  font-weight: 700;
+  letter-spacing: -0.5px;
+  &_span {
+    color: $color-blue;
+  }
 
 }
