--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -1,5 +1,6 @@
 .tabs {
   $tab-gap: 25px;
+ 
 
   display: block;
   font-size: 0;
@@ -52,7 +53,7 @@
   & + &-content { margin-top: 30px; }
 
   &-content {
-
+    margin-bottom: 130px;
     &__wrapper {
       display: none;
       opacity: 0;
