--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -10,7 +10,9 @@ block content
     +breadcrumbs-box
     +content
     .container
-       +slider-two(false, true)
+      .slider-title You may also like spaces around 
+        span.slider-title_span Kensington 
+      +slider-two(false, true)
         +slide
           img(src='./assets/images/sbo.jpg').slide-img
         +slide
