--- a/app/blocks/breadcrumbs/breadcrumbs.scss
+++ b/app/blocks/breadcrumbs/breadcrumbs.scss
@@ -27,6 +27,11 @@ $breadpadding: 35px;
       span {
         border-bottom: 0px solid #fff;
       }
+      &:hover {
+        span {
+          border-bottom: 1px solid $color-basic-dark;
+        }
+      }
     }
 
     &:last-child .link {
