--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -1,7 +1,7 @@
 mixin header()
   +b.header&attributes(attributes)
     .container.container_flex
-      +e.__logo
+      +e.A(href="/").__logo
         +e.IMG.__logo-img(src='assets/images/logo.png')
       +header-menu
       +burger
