--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -2,10 +2,13 @@
   display: block;
   margin-top: 20px;
   border-top: 1px solid $color-basic;
-  padding: 50px 0 0 0;
+  padding: 70px 0 50px 0;
 
   &__logo {
     margin-right: 60px;
+    &-img {
+      margin-top: -20px;
+    }
   }
 
   &__top {
@@ -31,6 +34,7 @@
 
   &__link {
     color: $color-basic;
+    font-weight: 700;
   }
 
   &__vertical-item {
