--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -15,10 +15,30 @@ block content
       +slider-two(false, true)
         +slide
           img(src='./assets/images/sbo.jpg').slide-img
+          .slider-cube
+            .cube
+          .slider-teitle TOG - Henry Wood House
+          .slider-plach W1W, London
         +slide
           img(src='./assets/images/sbt.jpg').slide-img
+          .slider-cube
+            .cube.cube_yellow
+            .cube.cube_red
+            .cube.cube_blue
+          .slider-teitle Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
         +slide
           img(src='./assets/images/sbth.jpg').slide-img
+          .slider-cube
+            .cube.cube_yellow
+            .cube.cube_red
+            .cube.cube_blue
+          .slider-teitle Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
         +slide
           img(src='./assets/images/sbf.jpg').slide-img
+          .slider-cube
+            .cube.cube_yellow
+          .slider-teitle Blooming Founders (Former Blooms Lon...
+          .slider-plach EC2A, London
     +footer
