--- a/app/pages/index/index.scss
+++ b/app/pages/index/index.scss
@@ -1,3 +1,21 @@
 .index {
   display: block;
 }
+
+.slider-cube {
+  display: flex;
+}
+
+.cube {
+  width: 9px;
+  height: 9px;
+  &_yellow {
+    background: $color-yellow;
+  }
+  &_red {
+    background: $color-red;
+  }
+  &_blue {
+    background: $color-blue;
+  }
+}
