--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -102,7 +102,7 @@
   width: 100%;
 
   &__button {
-    border: 1px solid $color-border;
+    border-left: 1px solid $color-border;
     width: 40px;
     display: table-cell;
     font-size: 18px;
