--- a/app/blocks/scroll-form/scroll-form.scss
+++ b/app/blocks/scroll-form/scroll-form.scss
@@ -61,5 +61,44 @@
         justify-content: center;
       }
     }
+
+    .input-numberbox__input {
+      border-bottom: 0px solid red;
+    } 
 }
 
+
+
+.option {
+  &-top {
+    letter-spacing: -0.28px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: $text-light;
+    font-size: 14px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    span {
+      display: block;
+      margin-right: 10px;
+    }
+  }
+  &-down {
+    letter-spacing: -0.4px;
+    font-weight: 700;
+    font-size: 20px;
+
+  }
+}
+
+.choices__inner {
+  height: 80px !important;
+}
+
+.choices__item {
+  &:hover {
+    background: $color-bg !important;
+    opacity: 1 !important;
+  }
+}
