--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -89,13 +89,27 @@
   }
 }
 
-.slider-title {
-  margin-bottom: 52px;
+.slider-title{
   font-size: 25px;
   font-weight: 700;
   letter-spacing: -0.5px;
-  &_span {
+  span {
     color: $color-blue;
   }
+  margin-bottom: 50px;
+}
 
+.slider-title__slide {
+  text-align: left;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 12px 0;
+}
+
+.slider-plach {
+  text-align: left;
+  font-size: 15px;
+  letter-spacing: -0.32px;
+  color: $color-basic-light;
+  font-weight: 400;
 }
