--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -2,7 +2,7 @@
   display: block;
   margin-top: 20px;
   border-top: 1px solid $color-basic;
-  padding: 70px 0 50px 0;
+  padding: 70px 0 0 0;
 
   &__logo {
     margin-right: 60px;
@@ -49,6 +49,7 @@
 
   &__social-list {
     display: flex;
+    justify-content: space-between;
   }
 
   &__social-item {
