--- a/app/components/content-left/content-left.pug
+++ b/app/components/content-left/content-left.pug
@@ -13,9 +13,9 @@ mixin content-left()
         +e.IMG(src='./assets/images/men.png')
       +e.LI.__map-item
         +e.__map-text Great Portland Street
-        +e.IMG(src='./assets/images/stop.png')
-        +e.IMG(src='./assets/images/stop.png').__mr
-        +e.IMG(src='./assets/images/stop.png').__last
+        +e.IMG(src='./assets/images/stop-o.png')
+        +e.IMG(src='./assets/images/stop-t.png').__mr
+        +e.IMG(src='./assets/images/stop-th.png').__last
         +e.__map-text._min 25 min
         +e.IMG(src='./assets/images/men.png')
       +e.LI.__map-item
