--- a/app/components/content/content.pug
+++ b/app/components/content/content.pug
@@ -2,4 +2,5 @@ mixin content()
   +b.content&attributes(attributes)
     .container.container_content
       +content-left
-      +scroll-form
+      +e.__right
+        +scroll-form
