--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -72,4 +72,23 @@
       border-top: 1px solid $color-basic;
     }
   }
+
+ 
+  .choices__inner {
+    height: auto !important;
+    margin-right: 20px;
+    border-bottom: 0 !important;
+    border: 0 !important;
+    padding: 0;
+  }
+  .choices__list {
+    border: 0;
+    background: rgba(0, 0, 0, 0);
+  }
+  .choices__item {
+    padding: 0;
+    margin-bottom: 5px;
+    font-weight: 700;
+    font-size: 16px;
+  }
 }
