--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -390,7 +390,7 @@ block content
               | Quod sit molestias sapiente.
           +accordion
             +accordion-header
-              +accordion-button Блок #2
+              +accordion-button +
             +accordion-body
               | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               | Obcaecati aliquam perferendis velit ex numquam, consequatur
@@ -402,7 +402,7 @@ block content
         +accordions(false)
           +accordion.is-active
             +accordion-header
-              +accordion-button Блок #1
+              +accordion-button +
             +accordion-body
               | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               | Obcaecati aliquam perferendis velit ex numquam, consequatur
@@ -411,7 +411,7 @@ block content
               | Quod sit molestias sapiente.
           +accordion
             +accordion-header
-              +accordion-button Блок #2
+              +accordion-button +
             +accordion-body
               | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               | Obcaecati aliquam perferendis velit ex numquam, consequatur
