--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -40,20 +40,22 @@
     top: 0;
     bottom: 0;
     margin: auto;
-    width: 40px;
+    width: 20px;
     height: 40px;
-    border: 1px solid $color-border;
     transition: opacity $ease-main;
     z-index: 2;
+    transition: .3s;
+    padding:20px 14px;
+    background-color:rgba($color: $color-grey-dark, $alpha: .2);
     cursor: pointer;
-    background-color: white;
+    
 
     &::before {
       content: '';
-      width: 10px;
-      height: 10px;
+      width: 30px;
+      height: 30px;
       border-style: solid;
-      border-color: $color-basic;
+      border-color: $color-wite;
       border-width: 0;
       position: absolute;
       transform: rotate(45deg);
@@ -65,10 +67,10 @@
       margin: auto;
     }
 
-    &:hover { opacity: .5; }
+    &:hover { background-color:rgba($color: $color-grey-dark, $alpha: .8); }
 
     &_next {
-      right: 20px;
+      right: 0;
 
       &::before {
         border-top-width: 2px;
@@ -78,7 +80,7 @@
     }
 
     &_prev {
-      left: 20px;
+      left: 0;
 
       &::before {
         border-bottom-width: 2px;
