--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -1,8 +1,13 @@
 .header {
   display: flex;
+  z-index: 10;
   align-items: center;
   &__logo {
     margin-right: auto;
   }
   padding: 30px 0;
+}
+
+.header-js {
+  background: $color-wite;
 }
